--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -35,6 +35,12 @@
 	</div>
 </script>
 <script id="member-relation-tmpl-src" type="text/x-jquery-tmpl">
+		<!--增加计算follow_members的人数、下单人数、成交金额-->
+		<p><span><strong>人数：${population}</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;
+			<span><strong>下单人数：${population_order}</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;
+			<span><strong>成交金额：￥${amount}</strong></span>
+		</p>
+		<!--增加计算follow_members的人数、下单人数、成交金额-->
 		<table style="width:100%;border:1px solid #ddd" class="table xb-stripedTable xb-noBorder">
 				<thead style="background:#c8d2e5;">
 				<tr class="">
