--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -36,15 +36,17 @@
 </script>
 <script id="member-relation-tmpl-src" type="text/x-jquery-tmpl">
 		<!--增加计算follow_members的人数、下单人数、成交金额-->
-		<div >
-			{{if data.only_fans==0}}
-				<div class="xui-fontGary fl cursor-text"><strong>好友数：${data.population}</strong></div>
-			{{else}}
-				<div class="xui-fontGary fl cursor-text"><strong>推荐人数：${data.population}</strong></div>
-			{{/if}}
-			<div class="ml50 xui-fontGary fl cursor-text"><strong>下单人数：${data.population_order}</strong></div>
-			<div class="ml50 xui-fontGary fl cursor-text"><strong>成交金额：￥${data.amount}</strong></div>
-		</div>
+		{{if data.population}}
+			<div >
+				{{if data.only_fans==0}}
+					<div class="xui-fontGary fl cursor-text"><strong>好友数：${data.population}</strong></div>
+				{{else}}
+					<div class="xui-fontGary fl cursor-text"><strong>推荐人数：${data.population}</strong></div>
+				{{/if}}
+				<div class="ml50 xui-fontGary fl cursor-text"><strong>下单人数：${data.population_order}</strong></div>
+				<div class="ml50 xui-fontGary fl cursor-text"><strong>成交金额：￥${data.amount}</strong></div>
+			</div>
+		{{/if}}
 		<div class="cb mb5"></div>
 		<!--增加计算follow_members的人数、下单人数、成交金额-->
 		<table style="width:100%;border:1px solid #ddd" class="table xb-stripedTable xb-noBorder">
