查看结果：图片OK

--- a/weapp/apps/customerized_apps/survey/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/survey/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -23,6 +23,6 @@
             </tr>
         {{/each}}
     </table>
-    <div class="xa-uploadimg_box inactive"><img class='xa-close_btn' src='/static_v2/img/close_btn.png'></div>
+    <div class="xa-uploadimg_box inactive"></div>
 </script>
 
