--- a/weapp/static/ueditor-1.2.6.1/dialogs/link/link.html
+++ b/weapp/static/ueditor-1.2.6.1/dialogs/link/link.html
@@ -147,12 +147,14 @@
             //修改链接内容的情况太特殊了，所以先做到这里了
             //todo:情况多的时候，做到command里
             if(orgText && text.value != orgText){
-                link[browser.ie ? 'innerText' : 'textContent'] =  obj.textValue = text.value;
+                // link[browser.ie ? 'innerText' : 'textContent'] =  obj.textValue = text.value;
+                link[browser.ie ? 'innerText' : 'textContent'] = text.value;
                 range.selectNode(link).select()
             }
             if(range.collapsed){
-                obj.textValue = text.value;
+                // obj.textValue = text.value;
             }
+
             editor.execCommand('link',obj );
             dialog.close();
         }
