--- a/weapp/static_v2/js/dialog/member_show_integral_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_show_integral_dialog/dialog.html
@@ -14,7 +14,7 @@
 				<div
 					data-ui-role="advanced-table"
 					data-app="member"
-					data-api="member_logs/get"
+					data-resource="integral_logs"
 					data-template-id="#member-ingegral-log-tmpl-src"
 					data-enable-paginator="true"
 					data-enable-sort="false"
