--- a/weapp/market_tools/tools/test_game/js/dialog/jion_user_dialog/dialog.html
+++ b/weapp/market_tools/tools/test_game/js/dialog/jion_user_dialog/dialog.html
@@ -14,14 +14,14 @@
 <script id="join-users-dialog-one-member-tmpl-src" type="text/x-jquery-tmpl">
 	<div data-id="${id}" class="one-member-block">
 		<div class="column_block">
-			<a href="/member/member_detail/edit/?id=${id}">
+			<a href="/member/detail/?id=${id}">
 			<img class="member_head_img" src="{{if user_icon}}${user_icon}{{else}}/static/img/user-1.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"/>
 			</a>
 		</div>
 
 		<div class="column_block">
 			<div>
-				<a href="/member/member_detail/edit/?id=${id}">{{html username}}</a>
+				<a href="/member/detail/?id=${id}">{{html username}}</a>
 			</div>
 
 			<div>
