--- a/weapp/static/js/dialog/usercenter_relations/dialog.html
+++ b/weapp/static/js/dialog/usercenter_relations/dialog.html
@@ -22,7 +22,7 @@
 <script id="usercenter-relations-dialog-one-relation-tmpl-src" type="text/x-jquery-tmpl">
 	<div data-id="${id}" class="relation-block">
 		<div class="column_block">
-			<a href="/member/member_detail/edit/?id=${id}">
+			<a href="/member/detail/?id=${id}">
 			<img src="{{if user_icon}}${user_icon}{{else}}/static/aa.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"/>
 			</a>
 
@@ -30,7 +30,7 @@
 
 		<div class="column_block"  style="width:350px;height:50px;position:relative;">
 			<div style="width:350px;">
-				<a href="/member/member_detail/edit/?id=${id}">{{html username}}</a>
+				<a href="/member/detail/?id=${id}">{{html username}}</a>
 				<span style="float:right;">来源：<span style="{{if is_fans}}padding:4px 3px;background-color:#008000;color:#fff;border-radius:3px;{{/if}}{{if is_father}}padding:4px 3px;background-color:#FF0000;color:#fff;border-radius:3px;{{/if}}">
 					{{if source == 0}}
 						直接关注
