--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -69,11 +69,11 @@
 							<tr data-id="${log.id}">
 								<td>
 									<div style="display:table ;line-height:42px;">
-										<a target="_blank" href="/member/member_detail/edit/?id=${id}" style="display: table-cell;vertical-align:top">
+										<a target="_blank" href="/member/detail/?id=${id}" style="display: table-cell;vertical-align:top">
 										<img src="{{if user_icon}}${user_icon}{{else}}/static/aa.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"style="width:42px;" />
 										</a>
 										<div style="display: table-cell;vertical-align:top;padding-left:8px; line-height:21px;text-align:left;">
-											<a target="_blank" href="/member/member_detail/edit/?id=${id}" >{{html username}}</a>
+											<a target="_blank" href="/member/detail/?id=${id}" >{{html username}}</a>
 											<div>${grade_name}</div>
 										</div>
 									</div>
@@ -100,7 +100,7 @@
 
 							    {{if data.only_fans==0}}
 									<td >
-										<a target="_blank" href="/member/member_detail/edit/?id=${log.father_id}" >{{html log.father_name}}</a>
+										<a target="_blank" href="/member/detail/?id=${log.father_id}" >{{html log.father_name}}</a>
 									</td>
 								{{/if}}
 							    <td >${log.created_at} </td>
