--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -14,7 +14,7 @@
 				<div
 					data-ui-role="advanced-table"
 					data-app="member"
-					data-api="follow_relations/get"
+					data-resource="follow_relations"
 					data-template-id="#member-relation-tmpl-src"
 					data-enable-paginator="true"
 					data-enable-sort="false"
