--- a/weapp/static_v2/js/dialog/select_member_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_member_dialog/dialog.html
@@ -12,7 +12,7 @@
             <div
                     data-ui-role="advanced-table"
                     data-app="member"
-                    data-api="members/get"
+                    data-api="member_list"
                     data-template-id="#add-select-member-dialog-tmpl"
                     data-enable-paginator="true"
                     data-enable-sort="false"
