--- a/weapp/static_v2/js/dialog/mall_select_promotion_red_enevlop_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/mall_select_promotion_red_enevlop_dialog/dialog.html
@@ -12,7 +12,7 @@
 		<div
 			data-ui-role="red-advanced-table"
 			data-app="member"
-			data-api="members/get"
+			data-api="member_list"
 			data-template-id="#promotion-vips-view"
 			data-enable-paginator="true"
             data-item-count-per-page='15'
