添加好友关系的默认排序

--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -16,6 +16,7 @@
 					data-app="member"
 					data-resource="follow_relations"
 					data-template-id="#member-relation-tmpl-src"
+					data-args='{"sort_attr":"-created_at"}'
 					data-enable-paginator="true"
 					data-enable-sort="false"
 					data-selectable="false"
