需求 5136(不带样式)

--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -46,7 +46,7 @@
 	<div  data-id="${id}" style="overflow: hidden; margin-top:10px">
 		<div >
 			<div class="column_block xui-memberHeader pr">
-				{{if member.is_subscribed == 0}}
+				{{if is_subscribed == 0}}
 					<div class="xui-cancelCover tc">
 					已取消
 					</div>
