--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -7,10 +7,10 @@
             <h3 class="modal-title">{{html member_name}}引入详情</h3>
         </div>
         <ul class="fans_data_ul xui-weixin-outlinePage">
-			<li>新关注人数<em>152</em>人</li>
-			<li>领取人数<em>3000</em>人</li>
-			<li>产生消费额<em>13000</em>人</li>
-			<li>使用人数<em>300</em>人</li>
+			<li style="font-weight: bold;margin-left: 10px;">新关注人数：<em>152</em>人</li>
+			<li style="font-weight: bold;">领取人数：<em>3000</em>人</li>
+			<li style="font-weight: bold;">产生消费额：<em>13000</em>人</li>
+			<li style="font-weight: bold;">使用人数：<em>300</em>人</li>
 		</ul>
         <div class="modal-body" style="min-height: 100px;overflow: auto;">
             <div
