--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -19,7 +19,7 @@
                 data-app="apps/promotion"
                 data-resource="red_envelope_participances"
                 data-args='{"id": "${red_id}"}'
-                data-template-id="#red_envelope_participances_view"
+                data-template-id="#red-envelope-dialog-detail-tmpl"
                 data-enable-paginator="true"
                 data-enable-sort="false"
                 data-selectable="true"
@@ -45,7 +45,7 @@
 </script>
 
 <script id="red-envelope-dialog-detail-tmpl" type="text/x-jquery-tmpl">
-<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
+<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10 red-envelope-detail-dialog">
 		<thead>
 			<tr>
 				<th>分享会员</th>
