--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -16,7 +16,7 @@
             <div
                 class="panel-body panel-table p0 mt10"
                 data-ui-role="advanced-table"
-                data-app="apps/promotion"
+                data-app="apps/red_envelope"
                 data-resource="red_envelope_participances"
                 data-args='{"id": "${red_id}"}'
                 data-template-id="#red-envelope-dialog-detail-tmpl"
