--- a/weapp/static/crossdomain.html
+++ b/weapp/static/crossdomain.html
@@ -1,1 +1,4 @@
-<script type="text/javascript">document.domain = location.host.replace('weapp.', '').replace('red.', '');parent.call_back();</script>
+<script type="text/javascript">
+	document.domain = location.host.replace('weapp.', '').replace('red.', '');
+	parent.call_back();
+</script>
