--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -64,8 +64,8 @@
 			<tr data-id="${item.id}" class="xa-selectTr">
 			<td style="position:relative;" >
 				<div class="column_block xui-memberHeader pr">
-					<a target="_blank" href="">
-						<img width="41" height="41" src="${item.participant_icon}" />
+					<a target="_blank" href="/member/detail/?id=${item.member_id}">
+						<img width="41" height="41" src="${item.participant_icon}" /><br>
 						{{html item.participant_name}}
 					</a>
 				</div>
