--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -9,7 +9,7 @@
         <ul class="fans_data_ul xui-weixin-outlinePage">
 			<li style="font-weight: bold;margin-left: 10px;">新关注人数：<em>${introduce_new_member}</em>人</li>
 			<li style="font-weight: bold;">领取人数：<em>${introduce_received_number}</em>人</li>
-			<li style="font-weight: bold;">产生消费额：<em>${introduce_sales_number}</em>人</li>
+			<li style="font-weight: bold;">产生消费额：<em>${introduce_sales_number}</em>元</li>
 			<li style="font-weight: bold;">使用人数：<em>${introduce_used_number}</em>人</li>
 		</ul>
         <div class="modal-body" style="min-height: 100px;overflow: auto;">
