--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -49,13 +49,13 @@
 		<thead>
 			<tr>
 				<th>分享会员</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='grade' data-sort-direction="up">会员状态</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='bring_members_count' data-sort-direction="up">引入领取人数</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='use_coupon_count' data-sort-direction="up">引入使用人数</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='new_member_count' data-sort-direction="up">引入新关注</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='member__grade' data-sort-direction="up">会员状态</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_received_number' data-sort-direction="up">引入领取人数</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_used_number' data-sort-direction="up">引入使用人数</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_new_member' data-sort-direction="up">引入新关注</th>
 				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_sales_number' data-sort-direction="up">引入消费额</th>
 				<th class="tx_sortable xui-Blue" data-sort-attr='created_at' data-init-sort="-created_at" data-sort-direction="up">领取时间</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='coupon_status' data-sort-direction="up">使用状态</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='coupon__status' data-sort-direction="up">使用状态</th>
 				<th>操作</th>
 			</tr>
 		</thead>
