--- a/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/red_envelope_detail_dialog/dialog.html
@@ -12,7 +12,7 @@
 			<li style="font-weight: bold;">产生消费额：<em>${introduce_sales_number}</em>元</li>
 			<li style="font-weight: bold;">使用人数：<em>${introduce_used_number}</em>人</li>
 		</ul>
-        <div class="modal-body" style="min-height: 100px;overflow: auto;">
+        <div class="modal-body" style="min-height: 100px;">
             <div
                 class="panel-body panel-table p0 mt10"
                 data-ui-role="advanced-table"
