--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -33,7 +33,16 @@
 
 				</h3>
 			</div>
-			<div class="modal-body" style="height: 500px;overflow: auto;">
+			<div class="modal-body" style="height: 500px;overflow: auto;"
+				data-ui-role="advanced-table"
+				data-app="member"
+				data-resource="follow_relations"
+				data-template-id="#member-relations-dialog-one-relation-tmpl-src"
+				data-enable-paginator="true"
+				data-enable-sort="false"
+				data-selectable="false"
+				data-item-count-per-page="6"
+				data-auto-load="false">
 			</div>
 
 
@@ -41,7 +50,7 @@
 	</div>
 	</div>
 </script>
-
+<!--
 <script id="member-relations-dialog-one-relation-tmpl-src" type="text/x-jquery-tmpl">
 	<div  data-id="${id}" style="overflow: hidden; margin-top:10px">
 		<div >
@@ -86,4 +95,54 @@
 		</div>
 	</div>
 
+</script>
+-->
+<script id="member-relations-dialog-one-relation-tmpl-src" type="text/x-jquery-tmpl">
+	<table class=""><tbody class="">{{each(i, member) items}}
+		<tr class=""><td>
+
+			<div  data-id="${member.id}" style="overflow: hidden; margin-top:10px">
+				<div >
+					<div class="column_block xui-memberHeader">
+						
+						<a href="/member/detail/?id=${member.id}" class="pr" style="float: left;margin-left: 25px">
+						{{if member.is_subscribed == 0}}
+							<div class="xui-cancelCover tc">
+							已取消
+							</div>
+						{{/if}}
+						<img src="{{if member.user_icon}}${member.user_icon}{{else}}/static/aa.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"style="width: 60px;" />
+						</a>
+					</div>
+					<div style="float: left;  margin-left: 12px;margin-top: 1px;">
+					<a href="/member/detail/?id=${member.id}" class="xi-member-name">{{html member.username}}</a><br>
+					<div style="margin-top: 15px;">{{html member.grade_name}}</span>&nbsp;&nbsp;&nbsp;&nbsp;</div></div>
+				</div>
+
+				<div style="width:350px;float:right;margin-right: -170px;">
+					<div>积分: ${member.integral}</div>
+					<div style="margin-top: 5px;">
+					<span>来源：<span style="{{if member.is_fans}}padding:4px 3px;background-color:#008000;color:#fff;border-radius:3px;{{/if}}{{if member.is_father}}padding:4px 3px;background-color:#FF0000;color:#fff;border-radius:3px;{{/if}}">
+						{{if member.source == 0}}
+							直接关注
+						{{/if}}
+						{{if member.source == 1}}
+							推广扫码
+						{{/if}}
+						{{if member.source == 2}}
+							会员分享
+						{{/if}}
+						{{if member.source == -1}}
+							直接关注
+						{{/if}}
+						</span>
+					</span>
+					<div>
+				</div>
+				<div style="margin-top: 4px;" class="relation-block">
+					<span style="color:#808080;">${member.created_at}</span>
+				</div>
+			</div>
+		</td></tr>
+	{{/each}}</tbody></table>
 </script>
