传播能力：会员列表-会员详情-传播能力排序方式改为-create-at,修改相关bdd以及创建会员时sleep 1

--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -39,7 +39,8 @@
 				data-resource="follow_relations"
 				data-template-id="#member-relations-dialog-one-relation-tmpl-src"
 				data-enable-paginator="true"
-				data-enable-sort="false"
+				data-enable-sort="true"
+				data-init-sort="-created_at"
 				data-selectable="false"
 				data-item-count-per-page="6"
 				data-auto-load="false">
