需求5470：格式微调

--- a/weapp/static_v2/js/dialog/weixin_mpuser_rehit_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/weixin_mpuser_rehit_dialog/dialog.html
@@ -1,7 +1,7 @@
 <script id="weixin-mpuser-rehit-dialog-tmpl-src" type="text/x-handlebar-tmpl">
     <div class="modal fade xui-weixinMpuserRehitDialog" id="weixinMpuserRehitDialog">
     <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+    <div class="modal-content w350 h170">
         <div class="modal-header">
             <button data-dismiss="modal" class="close" type="button"><span class="xui-closeColor">&times;</span></button>
             <h3 class="modal-title">
@@ -9,12 +9,12 @@
             </h3>
         </div>
 
-        <div class="modal-body">
-            必须使用当前绑定的公众号进行授权，否则将可能导致某些重要数据丢失或其他异常情况。
+        <div class="modal-body" style="color:red; text-align:center; font-size:12px; font-family: "Microsoft YaHei",Arial;">
+            必须使用当前绑定的公众号进行授权，否则将<br />可能导致某些重要数据丢失或其他异常情况。
         </div>
 
-        <div class="modal-footer modal-footerBg">
-            <a href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://{{request_host}}/weixin/component/receiveauthcode/" target="_blank"><button class="btn btn-success">我知道了，继续</button> </a>
+        <div class="modal-footer ">
+            <a href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://{{request_host}}/weixin/component/receiveauthcode/" target="_blank"><button class="btn btn-success h30" style="font-size:11px; font-weight:bold; padding:0px; width:125px; background:#207cbe;">我知道了，继续</button> </a>
         </div>
     </div>
     </div>
