--- a/weapp/static_v2/js/dialog/weixin_mpuser_rehit_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/weixin_mpuser_rehit_dialog/dialog.html
@@ -9,12 +9,12 @@
             </h3>
         </div>
 
-        <div class="modal-body" style="color:red; text-align:center; font-size:12px; font-family: "Microsoft YaHei",Arial;">
+        <div class="modal-body" style="color:red; text-align:center; font-size:12px; padding-top:25px; line-height:1.6;">
             必须使用当前绑定的公众号进行授权，否则将<br />可能导致某些重要数据丢失或其他异常情况。
         </div>
 
         <div class="modal-footer ">
-            <a href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://{{request_host}}/weixin/component/receiveauthcode/" target="_blank"><button class="btn btn-success h30" style="font-size:11px; font-weight:bold; padding:0px; width:125px; background:#207cbe;">我知道了，继续</button> </a>
+            <a href="https://mp.weixin.qq.com/cgi-bin/componentloginpage?component_appid={{app_id}}&pre_auth_code={{pre_auth_code}}&redirect_uri=http://{{request_host}}/weixin/component/receiveauthcode/" target="_blank"><button class="btn btn-success h30" style="font-size:12px; font-weight:bold; padding:0px; width:125px; background:#207cbe;">我知道了，继续</button> </a>
         </div>
     </div>
     </div>
