需求5470 样式：点击重新授权时添加提示弹窗，点击“我知道了”跳转授权页面，返回至公众号授权页面时，刷新页面

--- a/weapp/static_v2/js/dialog/weixin_mpuser_rehit_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/weixin_mpuser_rehit_dialog/dialog.html
@@ -1,7 +1,7 @@
 <script id="weixin-mpuser-rehit-dialog-tmpl-src" type="text/x-handlebar-tmpl">
     <div class="modal fade xui-weixinMpuserRehitDialog" id="weixinMpuserRehitDialog">
-    <div class="modal-dialog modal-lg">
-    <div class="modal-content w350 h170">
+    <div class="modal-dialog modal-lg w350">
+    <div class="modal-content  h170 mt300" >
         <div class="modal-header">
             <button data-dismiss="modal" class="close" type="button"><span class="xui-closeColor">&times;</span></button>
             <h3 class="modal-title">
@@ -9,7 +9,7 @@
             </h3>
         </div>
 
-        <div class="modal-body" style="color:red; text-align:center; font-size:12px; padding-top:25px; line-height:1.6;">
+        <div class="modal-body xui-text" >
             必须使用当前绑定的公众号进行授权，否则将<br />可能导致某些重要数据丢失或其他异常情况。
         </div>
 
