[f_mall_4859][lei]解决需求 4859 404和无商品页面跳转更改

--- a/weapp/static/error-page/404.html
+++ b/weapp/static/error-page/404.html
@@ -47,7 +47,6 @@
 </body>
 <script>
 	var homePageUrl = localStorage.getItem("homepage_url");
-	var url = '/workbench/jqm/preview/?'+ homePageUrl;
-	document.getElementById('url').setAttribute("href",url);
+	document.getElementById('url').setAttribute("href",homePageUrl);
 </script>
 </html>
