--- a/weapp/static/error-page/no_product.html
+++ b/weapp/static/error-page/no_product.html
@@ -47,7 +47,6 @@
 </body>
 <script>
 	var homePageUrl = localStorage.getItem("homepage_url");
-	var url = '/workbench/jqm/preview/?'+ homePageUrl;
-	document.getElementById('url').setAttribute("href",url);
+	document.getElementById('url').setAttribute("href",homePageUrl);
 </script>
 </html>
