--- a/weapp/static/error-page/404.html
+++ b/weapp/static/error-page/404.html
@@ -38,6 +38,7 @@
 	</style>
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
     <script type="text/javascript" src="/termite_static/v3/gmu/zepto.js"></script>
+    <script type="text/javascript" src="/termite_static/v3/gmu/widget/cookie.js"></script>
 </head>
 
 <body>
