修复百宝箱导出异常；修复预览异常

--- a/weapp/apps/customerized_apps/survey/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/survey/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -14,7 +14,7 @@
 </script>
 
 <script id="app-survey-viewParticipanceResultDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
-    <span style="font-size:16px;font-weight:bold;">"{{webapp_user_name}}"填写的内容</span>
+    <span style="font-size:16px;font-weight:bold;">"{{{webapp_user_name}}}"填写的内容</span>
     <table class="table table-bordered">
         {{#each items}}
         	{{#if type}}
