--- a/weapp/apps/customerized_apps/red_packet/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/red_packet/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -1,5 +1,5 @@
-<script id="app-powerme-viewParticipanceDataDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
-	<div class="xui-app_powerme-Dialog modal fade">
+<script id="app-red_packet-viewParticipanceDataDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
+	<div class="xui-app_red_packet-Dialog modal fade">
 	<div class="modal-dialog modal-lg">
 	<div class="modal-content">
 		<div class="modal-header">
