--- a/weapp/apps/customerized_apps/red_packet/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/red_packet/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -19,7 +19,7 @@
 <script id="app-red_packet-grant-result-dialog-tmpl" type="text/x-handlebar-tmpl">
 	<div class="xui-app_red_packet-Dialog modal fade">
 	<div class="modal-dialog modal-lg">
-	<div class="modal-content">
+	<div class="modal-content" style="width: 450px;margin:0 auto;">
 		<div class="modal-header">
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
 			<h3 class="modal-title" >现金红包发放结果</h3>
